# bindgen-trait

./: Cargo.toml
crates/interface/: Cargo.toml
crates/interface/src/: guest.rs  host.rs  lib.rs
crates/lib/: Cargo.toml
crates/lib/src/: common.rs  guest.rs  host.rs
crates/module/: Cargo.toml
crates/module/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: main.rs
crates/wasm-bindgen-test/: Cargo.toml
crates/wasm-bindgen-test/src/: lib.rs
