[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
guest = ["lib/guest"]
host = ["wasmer", "lib/host"]

[dependencies]
lib = { path = "../lib" }
wasmer = { version = "2.0", optional = true }
fp-bindgen-support = { version = "1.0.0", features = ["guest", "async"] }
async-trait = "0.1.53"
